src/styles/ProjectData.css
@font-face {
    font-family: 'Times Now Light';
    src: url('../fonts/TimesNow-Light.ttf');
  }

@font-face {
    font-family: 'Times Now ExtraLight';
    src: url('../fonts/TimesNow-ExtraLight.ttf');
  }
  
.project-details-container {
    width: 100vw;
    flex-direction: row;
    display: flex;
    position: relative;
    overflow-y: scroll;
  }

  .gradient-overlay {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99999;
    right: 0;
    width: 100vw;
  }
  
  .gradient-overlay::after {
    content: '';
    position: absolute;
    top: -1px;
    left: 0;
    right: 0;
    height: 5vh;
    background: linear-gradient(to top, transparent, var(--background-color));
  }
  
  .project-details-inner {
    top: 6dvh;
    left: 50%;
    transform: translate(-50%);
    width: 100vw;
    flex-direction: row;
    display: flex;
    position: fixed;
    opacity: 0;
    transition: opacity 2s ease-in-out;
    bottom: 6vh; /* Add bottom: 0 to position it at the bottom of the page */
  }
  
  .project-details-inner::after {
    content: '';
    position: absolute;
    bottom: -1px; /* Set bottom: 0 to keep it at the bottom of the container */
    left: 0;
    right: 0;
    width: 100vw;
    height: 5%; /* Adjust the height of the gradient as needed */
    background: linear-gradient(to top, var(--background-color), transparent);
  }
  
  .project-details-inner.fade-enter {
    opacity: 1;
  }


  .project-information {
    display: flex;
    flex-direction: column;
    margin-top: auto;
    align-items: flex-start; /* Align items to the left */
    margin-bottom: 0px;
    position: sticky;
    top: 0; /* Adjust the top position as needed */
    z-index: 2; /* Adjust the z-index as needed */
    width: 50vw;
    height: 88vh;
    margin-left:35px; 
    max-width: 50%; /* Set the maximum width to 50% of the viewport width */
  }


  .project-images {
    display: flex;
    pointer-events: auto; /* Enable pointer events */
    flex-direction: column;
    align-items: center;
    margin-top: auto;
    margin-bottom: 0px;
    position: relative;
    height: 88vh;
    padding-bottom: 20px;
    width:50vw;
    margin-bottom: 20px; /* Add a desired margin at the bottom */
  }
  
  
  .image-container {
    width: 50vw;
    margin-top:0px;
    padding: 39px;
    padding-top: 5%;
    flex-direction: column;
    overflow-x:hidden;
    display: inline-table;
  }
  
  .image-container img,
  .image-container video {
    width: 600px;
    display: block;
    margin: 0 auto;
    margin-bottom: 20px;
    box-shadow: 0 0 10px 2px var(--box-shadow);
  }



  .image-container:first-child img {
    position: relative;
    top: 4%;
    transform: translateX(0, -4%);
  }

  
  .project-title,
  .project-technologies,
  .project-description,
  .project-collab { 
    justify-content: left;
    align-items: left;
    text-align: left;
  }

  .project-title{
    font-family: 'Times Now Light';
    font-size: 4rem;
    top:0; 
    margin-top:0; 
    margin-bottom: 0px;
  }

  .project-technologies{
    font-family: 'Times Now ExtraLight';
    margin-top:5px; 
    font-size:0.8em;
    margin-bottom: 0px;
  }
  .project-collab{
    font-family: 'Times Now ExtraLight';
    margin-top:5px; 
    font-size:0.8em;
    margin-bottom: 0px;
  }

  .project-description{
    font-family: 'Times Now Light';
    font-size:0.8em;
    text-align:justify;
  }


  .return{
  border: none;
  border-color: transparent;
  background-color: transparent;
  color: black;
  font-size: 15px;
  margin-bottom:0; 
  padding-left:0; 
  outline:none; 
  padding-bottom:5px; 
  font-family: 'Times Now Light';
  cursor: pointer; 
  }
  
  
  @media screen and (min-width: 756px) and (max-width: 1000px) {
    .image-container img,
    .image-container video{
      width: 300px;
    }

  }

  @media screen and (max-width: 756px) {
    .project-details-container {
      flex-direction: column;
      overflow-x: hidden;
    }
    .project-information {
      position: relative; 
      width:100vw;
      margin-left:22px; 
      max-width: 90%;
      height: fit-content;
      top: 0px;
      margin-top: 0px;
    }
    .image-container {
      width: 100vw;
      padding-top: 20px;
      padding-left:0px;
      padding-right:0px;
      padding-bottom:0px;

    }

    .image-container img,
    .image-container video{
      width: 340px;
    }

  }

  
  @media screen and (min-width: 1439px) {
    .image-container {
      height: 220vh;
    }
  }
  
  @media screen and (min-width: 1539px) {
    .project-title {
      font-size: 4em;
    }
  
    .project-description {
      font-size: 1em;
    }
  
    .project-technologies,
    .project-collab {
      font-size: 1em;
    }
  
    .image-container img,
    .image-container video {
      width: 500px;
    }
  }
  
  @media screen and (min-width: 2339px) {
    .project-technologies,
    .project-collab {
      font-size: 2em;
    }
  
    .project-title {
      font-size: 8em;
    }
  
    .project-description {
      font-size: 1em;
    }
  
    .image-container img,
    .image-container video {
      width: 700px;
    }
  }
  
  @media screen and (min-width: 1900px) {
    .project-technologies,
    .project-collab {
      font-size: 2em;
    }
  
    .project-title {
      font-size: 5em;
    }
  
    .project-description {
      font-size: 1em;
    }
  
    .image-container img,
    .image-container video {
      width: 800px;
      margin-bottom:80px;
    }
  }
  
  @media screen and (min-width: 2900px) {
    .project-technologies,
    .project-collab {
      font-size: 2em;
    }
  
    .project-title {
      font-size: 8em;
    }
  
    .project-description {
      font-size: 1.5em;
    }
  
    .image-container img,
    .image-container video {
      width: 1200px;
    }
  }
  
  @media screen and (min-width: 5000px) {
    .project-technologies,
    .project-collab {
      font-size: 2.5em;
    }
  
    .project-title {
      font-size: 16em;
    }
  
    .project-description {
      font-size: 3em;
    }
  
    .image-container img,
    .image-container video {
      width: 1800px;
    }
  }
  

